--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "assets-webpack-plugin": "^7.1.1",
-    "firebase": "^9.8.1",
+    "firebase": "^9.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-button": "^0.7.2",
     "react-router-dom": "6",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
