--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-button": "^0.7.2",
+    "react-redux": "^8.0.4",
     "react-router-dom": "6",
     "react-scripts": "4.0.3",
+    "redux": "^4.2.0",
+    "redux-logger": "^3.0.6",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
