--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "react-scripts": "4.0.3",
     "redux": "^4.2.0",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.2.1",
+    "redux-thunk": "^2.4.1",
+    "reselect": "^4.1.6",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
