--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@stripe/react-stripe-js": "^1.14.1",
+    "@stripe/stripe-js": "^1.42.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "assets-webpack-plugin": "^7.1.1",
+    "dotenv": "^16.0.3",
     "firebase": "^9.8.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -20,6 +23,7 @@
     "redux-saga": "^1.2.1",
     "redux-thunk": "^2.4.1",
     "reselect": "^4.1.6",
+    "stripe": "^10.15.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
