--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-redux": "^8.0.4",
     "react-router-dom": "6",
     "react-scripts": "4.0.3",
+    "react-toastify": "9.0.0",
     "redux": "^4.2.0",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
