--- a/package.json
+++ b/package.json
@@ -8,10 +8,6 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^29.2.2",
-    "@types/node": "^18.11.9",
-    "@types/react": "^18.0.25",
-    "@types/react-dom": "^18.0.8",
     "assets-webpack-plugin": "^7.1.1",
     "dotenv": "^16.0.3",
     "firebase": "^9.8.3",
@@ -29,7 +25,7 @@
     "redux-thunk": "^2.4.1",
     "reselect": "^4.1.6",
     "stripe": "^10.15.0",
-    "typescript": "^4.8.4",
+    "styled-components": "^5.3.6",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
